fix navbar overflow on mobile

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7573,6 +7573,7 @@ input[type=range]:focus::-ms-fill-upper {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 997;
   will-change: opacity;
+  display: none
 }
 
 /*
